create the PyCharm Project

--- a/www/templates/blog.html
+++ b/www/templates/blog.html
@@ -52,7 +52,7 @@ $(function () {
                 <form id="form-comment" class="uk-form">
                     <div class="uk-alert uk-alert-danger uk-hidden"></div>
                     <div class="uk-form-row">
-                        <textarea rows="6" placeholder="说点什么吧" style="width:100%;resize:none;"></textarea>
+                        <textarea rows="6" placeholder="记录你的点滴" style="width:100%;resize:none;"></textarea>
                     </div>
                     <div class="uk-form-row">
                         <button type="submit" class="uk-button uk-button-primary"><i class="uk-icon-comment"></i> 发表评论</button>
