--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -79,9 +79,9 @@
                     <a target="_blank" href="https://weibo.com/wieangeal" class="uk-icon-button uk-icon-linkedin-square"></a>
                     <a target="_blank" href="https://weibo.com/wieangeal" class="uk-icon-button uk-icon-twitter"></a>
                 </p>
-                <p>Powered by <a href="http://awesome.liaoxuefeng.com">章果的网站</a>. Copyright &copy; 2014. [<a href="/manage/" target="_blank">Manage</a>]</p>
-                <p><a href="http://www.liaoxuefeng.com/" target="_blank">https://github.com/WieAngeal</a>. All rights reserved.</p>
-                <a target="_blank" href="http://www.w3.org/TR/html5/"><i class="uk-icon-html5" style="font-size:64px; color: #444;"></i></a>
+                <p>Powered by <a href="https://weibo.com/wieangeal">章果的网站</a>. Copyright &copy; 2014. [<a href="/manage/" target="_blank">Manage</a>]</p>
+                <p><a href="https://weibo.com/wieangeal" target="_blank">https://github.com/WieAngeal</a>. All rights reserved.</p>
+                <a target="_blank" href="https://weibo.com/wieangeal"><i class="uk-icon-html5" style="font-size:64px; color: #444;"></i></a>
             </div>
 
         </div>
